--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   ],
   "require": {
     "php": "^8.2",
-    "psr/http-message": "^1.0",
+    "psr/http-message": "^1.1 || ^2.0",
     "psr/http-client-implementation": "^1.0",
     "php-http/httplug": "^2.0",
     "php-http/message-factory": "^1.0",
